@@ -3,6 +3,9 @@ NEWS - OpenPrinting CUPS Filters v1.5.0 - 2015-12-17
 
 CHANGES IN V1.6.0
 
+	- foomatic-rip: Fixed buffer overflow when reading environment
+	  variables CUPS_FONTPATH, CUPS_DATADIR, and GS_LIB (Bug
+	  #1336).
 	- beh: Introduced beh, the Backend Error Handler, a wrapper
 	  backend to make handling of backend errors more
 	  configurable. This backend is a C re-write of the beh
